tests/base/invalid/ListDefine_CompileFail_1.whiley
define intset as [int]

void System::main([string] args):
     is = {1,2,3,4}
     out.println(str(|il|))
     out.println(str(is) ∪ {5})
